# rp-hello-world

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: README.md  release.yaml
hello_world/: __main__.py  bleat.py
