[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = "Hello World repo to test Release Please"
authors = ["Manu Dawber <manudawber@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
hello = "hello_world.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
